tests/compile-fail/bad_timeout.stderr
error: expected duration string here
       help: use `timeout = "30s"` or `timeout = "500ms"`
  --> tests/compile-fail/bad_timeout.rs:11:19
   |
11 | #[assay(timeout = 30)]
   |                   ^^
